--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>JavaInterviews</groupId>
-    <artifactId>JI</artifactId>
+    <groupId>JavaBigdata</groupId>
+    <artifactId>JBD</artifactId>
     <version>1.0-SNAPSHOT</version>
     <build>
         <plugins>
@@ -38,12 +38,12 @@
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-core_2.10</artifactId>
-            <version>2.1.0</version>
+            <version>[2.2.0,)</version>
         </dependency>
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-sql_2.10</artifactId>
-            <version>2.1.0</version>
+            <version>[2.2.0,)</version>
         </dependency>
     </dependencies>
 
