--- a/pom.xml
+++ b/pom.xml
@@ -32,13 +32,13 @@
         </dependency>
         <dependency>
             <groupId>org.apache.spark</groupId>
-            <artifactId>spark-core_2.10</artifactId>
-            <version>[2.2.0,)</version>
+            <artifactId>spark-core_2.11</artifactId>
+            <version>[2.4.0,)</version>
         </dependency>
         <dependency>
             <groupId>org.apache.spark</groupId>
-            <artifactId>spark-sql_2.10</artifactId>
-            <version>[2.2.0,)</version>
+            <artifactId>spark-sql_2.11</artifactId>
+            <version>[2.4.0,)</version>
         </dependency>
         <dependency>
             <groupId>org.testng</groupId>
@@ -51,6 +51,14 @@
             <version>5.0.1</version>
             <scope>test</scope>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/joda-time/joda-time -->
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.8.1</version>
+        </dependency>
+
     </dependencies>
 
 
