--- a/.gitignore
+++ b/.gitignore
@@ -240,3 +240,8 @@ vignettes/*.pdf
 hs_err_pid*
 
 spark-warehouse/
+.settings/org.eclipse.jdt.apt.core.prefs
+.settings/org.eclipse.jdt.core.prefs
+.settings/org.eclipse.m2e.core.prefs
+.classpath
+.project
