--- a/Kotlin/pom.xml
+++ b/Kotlin/pom.xml
@@ -18,6 +18,11 @@
     </properties>
 
     <dependencies>
+            <dependency>
+                <groupId>commons-lang</groupId>
+                <artifactId>commons-lang</artifactId>
+                <version>2.6</version>
+            </dependency>
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-stdlib</artifactId>
